# MapGenerator

./: .gitignore  CLAUDE.md  HeightMap.py  HeightMapRecon.py  README.md  descriptor.py  main.py  pyproject.toml  requirements.txt
_old_01/core_old/: biome_generator.py  terrain_generator.py
_old_01/gui_old/: navigation_widget.py
_old_02/: loading_tab.py
core/: __init__.py  base_generator.py  biome_generator.py  geology_generator.py  settlement_generator.py  terrain_generator.py  village_generator.py  water_generator.py  weather_generator.py  world_generator.py
core_old/: water_generator.py
docs/: backlog.md  generation_pipeline_dependencies.md  session_handover_2026-07-08.md  tickets.xlsx
gui/: main_menu.py  map_editor.py  map_editor_window.py  world_state.py
gui/OldManagers/: calculator_graph.py  data_lod_manager.py  export_manager.py  generation_orchestrator.py  navigation_manager.py  parameter_manager.py  shader_manager.py  statistics_manager.py
gui/config/: __init__.py  default_config.py  gui_default.py  value_default.py
gui/managers/: data_lod_manager.py  data_manager.py  generation_orchestrator.py  layout_manager.py  navigation_manager.py  orchestrator_manager.py  orchestrator_manager_delete.py  parameter_manager.py  resource_manager.py  resource_manager_delete.py  shader_manager.py
gui/tabs/: base_tab.py  biome_tab.py  geology_tab.py  loading_tab.py  main_menu.py  overview_tab.py  settlement_tab.py  terrain_tab.py  water_tab.py  (+1 more)
gui_old/: __init__.py  main_menu.py
managers/: parameter_manager.py  thread_manager.py
tools/: plot_physics_lab.py
(+75 files in other folders)
